# shacl2pydantic

./: COMPLIANCE.md  LICENSE  README.md  example.ttl  pyproject.toml
src/shacl2pydantic/: __init__.py  cli.py  generator.py  ir.py  parser.py  types.py
